--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
     <section>
         <article class="container">
                 <div class="row1">
-                    <div class="image1"><a href="Oso.html"><img src="img/Oso_tn.jpg" alt="Perrito"></a></div>
-                    <div class="image2"><a href="maya.html"><img src="img/Maya_tn.jpg" alt="Perrito"></a></div>
-                    <div class="image3"><a href="wifi.html"><img src="img/Wifi_tn.jpg" alt="Perrito"></a></div>
+                    <div><a href="Oso.html"><img src="img/Oso_tn.jpg" alt="Perrito"></a></div>
+                    <div><a href="maya.html"><img src="img/Maya_tn.jpg" alt="Perrito"></a></div>
+                    <div><a href="wifi.html"><img src="img/Wifi_tn.jpg" alt="Perrito"></a></div>
                 </div>
                 <div class="row2">
-                    <div class="image4"><a href="chocolate.html"><img src="img/Chocolate_tn.jpg" alt="Perrito"></a></div>
-                    <div class="image5"><a href="pexel.html"><img src="img/Pexel_tn.jpg" alt="Perrito"></a></div>
+                    <div><a href="chocolate.html"><img src="img/Chocolate_tn.jpg" alt="Perrito"></a></div>
+                    <div><a href="pexel.html"><img src="img/Pexel_tn.jpg" alt="Perrito"></a></div>
                 </div>
                 <div class="row3">
-                    <div class="image6"><a href="bigotes.html"><img src="img/Bigotes_tn.jpg" alt="Perrito"></a></div>
-                    <div class="image7"><a href="luna.html"><img src="img/Luna.jpg" alt="Perrito"></a></div>
+                    <div><a href="bigotes.html"><img src="img/Bigotes_tn.jpg" alt="Perrito"></a></div>
+                    <div><a href="luna.html"><img src="img/Luna.jpg" alt="Perrito"></a></div>
                 </div>
         </article>
     </section>
