Perfil de mascota lista

--- a/chocolate.html
+++ b/chocolate.html
@@ -14,7 +14,8 @@
         <article class="margen">
             <img src="img/Chocolate.jpg" alt="Perrito llamado Chocolate">
         </article>
-        <article>
+        <article class="margen">
+            <p class="nombre">Nombre: Chocolate</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ad quas. Officia ullam quis deleniti, eaque officiis eum esse aspernatur eveniet sed sint amet nesciunt distinctio soluta neque excepturi natus?</p>
         </article>
     </section>
