--- a/bigotes.html
+++ b/bigotes.html
@@ -14,7 +14,8 @@
         <article class="margen">
             <img src="img/Bigotes.jpg" alt="Perrito llamado Bigotes">
         </article>
-        <article>
+        <article class="margen">
+            <p class="nombre">Nombre: Bigotes</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ad quas. Officia ullam quis deleniti, eaque officiis eum esse aspernatur eveniet sed sint amet nesciunt distinctio soluta neque excepturi natus?</p>
         </article>
     </section>
