--- a/luna.html
+++ b/luna.html
@@ -14,7 +14,8 @@
         <article class="margen">
             <img src="img/Luna.jpg" alt="Perrito llamado Luna">
         </article>
-        <article>
+        <article class="margen">
+            <p class="nombre">Nombre: Luna</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ad quas. Officia ullam quis deleniti, eaque officiis eum esse aspernatur eveniet sed sint amet nesciunt distinctio soluta neque excepturi natus?</p>
         </article>
     </section>
