--- a/maya.html
+++ b/maya.html
@@ -14,7 +14,8 @@
         <article class="margen">
             <img src="img/Maya.jpg" alt="Perrito llamado Maya">
         </article>
-        <article>
+        <article class="margen">
+            <p class="nombre">Nombre: Maya</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ad quas. Officia ullam quis deleniti, eaque officiis eum esse aspernatur eveniet sed sint amet nesciunt distinctio soluta neque excepturi natus?</p>
         </article>
     </section>
