Corrección menor a texto

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <section class="section1">
         <article class="principal">
             <img class="imgprincipal" src="img/Tom.jpg">
+            <div class="textprincipal"><p>"Estamos felices de tener a Tom en casa. Es un super fiel compañero"</p></div>
         </article>
         <article class="redessociales">
                 <div class="imgr"><a href="https://es-la.facebook.com/people/Mis-Perris/100009889513641"><img src="img/facebook.png" alt="Facebook"></a></div>
